@@ -1,7 +1,7 @@
 package com.miedzic.shop.controller;
 
 import com.miedzic.shop.domain.dto.ErrorDto;
-import com.miedzic.shop.domain.dto.FieldErrorDto;
+import com.miedzic.shop.domain.dao.FieldErrorDto;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.FieldError;
@@ -11,11 +11,10 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.multipart.support.MissingServletRequestPartException;
 
-import javax.persistence.EntityNotFoundException;
-import javax.validation.ConstraintViolationException;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ConstraintViolationException;
 import java.sql.SQLIntegrityConstraintViolationException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
@@ -44,13 +43,12 @@ public class AdviceController {
         /*   List<FieldErrorDto> list = */
         return e.getBindingResult().getAllErrors().stream()
                 .map(objectError -> {
-                    if(objectError instanceof FieldError){
-                        FieldError fieldError = (FieldError) objectError;
+                    if(objectError instanceof FieldError fieldError){
                         return new FieldErrorDto(fieldError.getField(), fieldError.getDefaultMessage());
                     }
                     return new FieldErrorDto(null,objectError.getDefaultMessage());
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
